--- a/style.css
+++ b/style.css
@@ -1,16 +1,62 @@
 * {
-    padding: 0px;
-    margin: 0px;
-    box-sizing: border-box;
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
 }
 
 body {
-    padding: 20px;
-    background-color: #242DFE;
+  font-family: "Merriweather", serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 18px;
+  padding: 20px;
+  background-color: #242dfe;
+}
+
+.bitter-bold {
+  font-family: "Bitter", serif;
+  font-weight: 600;
 }
 
 .header {
-    height: 100vh;
-    width: 100%;
-    background-color: #FFFFFF;
+  height: 100vh;
+  width: 100%;
+  padding: 0 130px;
+  background-color: #ffffff;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 40px;
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+}
+
+.nav-items {
+  display: flex;
+  gap: 24px;
+  list-style-type: none;
+  padding: 20px 0;
+  color: #595959;
+}
+
+.nav-btn {
+  background: #242dfe;
+  padding: 18px 24px;
+  border: 0px;
+  outline: 0px;
+  border-radius: 5px;
+  color: #fff;
+}
+
+.nav-btn span {
+    font-weight: 400;
+}
+
+.hero-section {
+    display: flex;
 }
